--- a/cafe-ingress.yaml
+++ b/cafe-ingress.yaml
@@ -1,27 +1,28 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: cafe-ingress 
+  name: cafe-ingress
 spec:
   ingressClassName: alb
   rules:
-   - host: demo.isofucius.cn
-     http:
+  - host: isofucius.cn
+    http:
       paths:
-      # 配置Context Path
-      - path: /tea
-        pathType: ImplementationSpecific
+      - path: /
+        pathType: Prefix
         backend:
           service:
-            name: tea-svc
+            name: app
             port:
-              number: 80
-      # 配置Context Path
-      - path: /coffee
-        pathType: ImplementationSpecific
+              number: 3000
+  - host: "*.isofucius.cn"
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
         backend:
           service:
-            name: coffee-svc
-            port: 
-              number: 80
+            name: app
+            port:
+              number: 3000
 
